[package]
name = "tree-sitter-ndf"
description = "Eugen Systems ndf grammar for tree-sitter."
version = "0.1.0"
keywords = ["parsing", "parser", "incremental", "ndf"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Ulibos/tree-sitter-ndf"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
